add twitter card info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@conallmcginty">
+  <meta name="twitter:title" content="Menu Creator">
+  <meta name="twitter:description" content="A small site that let's you create simple menus.">
+  <meta name="twitter:image" content="https://media3.s-nbcnews.com/j/newscms/2019_41/3044956/191009-cooking-vegetables-al-1422_ae181a762406ae9dce02dd0d5453d1ba.nbcnews-fp-1200-630.jpg">
 
 <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
